# RedCultureService

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
app/: CMakeLists.txt
app/redculture_server/: CMakeLists.txt  README.md  main.cpp  server_routes.cpp  server_routes.hpp
app/redculture_server/controllers/: auth_controller.cpp  auth_controller.hpp
app/redculture_server/dto/: auth_dto.hpp
app/redculture_server/include/redculture_server/api/: http_utils.hpp  server_routes.hpp
app/redculture_server/include/redculture_server/api/controllers/: auth_controller.hpp  interaction_controller.hpp  ops_controller.hpp  room_controller.hpp  tts_controller.hpp
app/redculture_server/include/redculture_server/api/dto/: auth_dto.hpp
app/redculture_server/include/redculture_server/application/: service_application.hpp
app/redculture_server/src/api/: http_utils.cpp  server_routes.cpp
app/redculture_server/src/api/controllers/: auth_controller.cpp  interaction_controller.cpp  ops_controller.cpp  room_controller.cpp  tts_controller.cpp
app/redculture_server/src/application/: service_application.cpp
config/: app.yaml
database/: schema.sql
docs/: Apifox测试流程.md  C++后端接口设计.md  Unity前端模块联动设计.md  Unity视频懒加载与互动提示设计.md  后端项目介绍.md  数据库设计.md  配置文件说明.md
docs/测试相关/: 后端接口测试文档.md  接口测试用例.json
example/: CMakeLists.txt  main.cpp
example/3rdpatryexample/: CMakeLists.txt  main.cpp  test_boost.cpp  test_fmt.cpp  test_grpc.cpp  test_gtest.cpp  test_hiredis.cpp  test_jwt_cpp.cpp  test_libpqxx.cpp  test_nlohmann_json.cpp  test_openssl.cpp  test_prometheus_cpp.cpp  test_protobuf.cpp  test_redis_plus_plus.cpp  test_spdlog.cpp  test_yaml_cpp.cpp  test_zlib.cpp
example/ai_orchestrator_example/: CMakeLists.txt  main.cpp
example/auth_example/: CMakeLists.txt  main.cpp
example/common_result_example/: CMakeLists.txt  main.cpp
example/config_hotreload_example/: CMakeLists.txt  main.cpp
example/gameplay_example/: CMakeLists.txt  main.cpp
example/http_api_example/: CMakeLists.txt  main.cpp
example/network_gateway_example/: CMakeLists.txt  main.cpp
example/observability_example/: CMakeLists.txt  main.cpp
example/ops_example/: CMakeLists.txt  main.cpp
example/room_match_example/: CMakeLists.txt  main.cpp
example/state_sync_example/: CMakeLists.txt  main.cpp
example/storage_example/: CMakeLists.txt  main.cpp
example/voice_tts_example/: CMakeLists.txt  main.cpp
include/rcs/ai_orchestrator/: README.md  ai_orchestrator_service.hpp
include/rcs/api/: README.md  http_utils.hpp  server_routes.hpp
include/rcs/api/controllers/: auth_controller.hpp  interaction_controller.hpp  ops_controller.hpp  room_controller.hpp  tts_controller.hpp
include/rcs/api/dto/: auth_dto.hpp
include/rcs/application/: README.md  api_routes.hpp  service_application.hpp
include/rcs/auth/: README.md  password_hasher.hpp  session_auth_service.hpp
include/rcs/common/: README.md  result.hpp  service.hpp
include/rcs/config_hotreload/: README.md  config_hotreload_service.hpp
include/rcs/gameplay/: README.md  cultural_interaction_service.hpp
include/rcs/http/: README.md  http_router.hpp  http_server.hpp  http_types.hpp
include/rcs/net/: README.md  message.hpp  network_gateway.hpp  rate_limiter.hpp  tcp_connection.hpp
include/rcs/observability/: README.md  telemetry_service.hpp
include/rcs/ops/: README.md  ops_service.hpp
include/rcs/room/: README.md  room_match_service.hpp
include/rcs/storage/: README.md  storage_service.hpp
include/rcs/sync/: README.md  state_sync_service.hpp
include/rcs/voice_tts/: README.md  voice_tts_service.hpp
src/: CMakeLists.txt
src/ai_orchestrator/: README.md  ai_orchestrator_service.cpp
src/api/: README.md  http_utils.cpp  server_routes.cpp
src/api/controllers/: auth_controller.cpp  interaction_controller.cpp  ops_controller.cpp  room_controller.cpp  tts_controller.cpp
src/application/: README.md  api_routes.cpp  service_application.cpp
src/auth/: README.md  password_hasher.cpp  session_auth_service.cpp
src/common/: README.md  service.cpp
src/config_hotreload/: README.md  config_hotreload_service.cpp
src/gameplay/: README.md  cultural_interaction_service.cpp
src/http/: README.md  http_router.cpp  http_server.cpp  http_types.cpp
src/net/: README.md  message.cpp  network_gateway.cpp  rate_limiter.cpp  tcp_connection.cpp
src/observability/: README.md  telemetry_service.cpp
src/ops/: README.md  ops_service.cpp
src/room/: README.md  room_match_service.cpp
src/storage/: README.md  storage_service.cpp
src/sync/: README.md  state_sync_service.cpp
src/voice_tts/: README.md  voice_tts_service.cpp
